--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -117,40 +117,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "208\n",
-      "429\n",
-      "624\n",
-      "812\n",
-      "990\n",
-      "1175\n",
-      "1363\n",
-      "1576\n",
-      "1757\n",
-      "1968\n",
-      "2158\n",
-      "2346\n",
-      "2556\n",
-      "2756\n",
-      "2964\n",
-      "3214\n",
-      "3388\n"
+      "199.2941176470588\n"
      ]
     }
    ],
    "source": [
     "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
     "total_weight = 0\n",
+    "count = 0\n",
+    "\n",
     "for weight in weights:\n",
-    "    total_weight = total_weight + weight \n",
-    "print(total_weight)"
+    "    total_weight = total_weight + weight ## or, total_weight+= weight\n",
+    "\n",
+    "number_of_players = len(weights)\n",
+    "average_weight = total_weight / number_of_players\n",
+    "\n",
+    "print(average_weight)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
