--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -112,12 +112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Find the average weight of team players"
+    "#### Find the average weight of team players by actual value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,6 @@
    "source": [
     "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
     "total_weight = 0\n",
-    "count = 0\n",
     "\n",
     "for weight in weights:\n",
     "    total_weight = total_weight + weight ## or, total_weight+= weight\n",
@@ -145,7 +144,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Find the average weight of team players by index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
+    "total_weights = 0\n",
+    "\n",
+    "for index in range(len(weights)):\n",
+    "    weight = weights[index]\n",
+    "    total_weights += weight\n",
+    "\n",
+    "number_of_players = len(weights)\n",
+    "average_weight = total_weight / number_of_players\n",
+    "print(average_weight)"
+   ]
   }
  ],
  "metadata": {
