--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199.2941176470588\n"
+     ]
+    }
+   ],
    "source": [
     "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
     "total_weights = 0\n",
@@ -164,6 +172,71 @@
     "number_of_players = len(weights)\n",
     "average_weight = total_weight / number_of_players\n",
     "print(average_weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use enumerate to grab both index and weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "208\n",
+      "1\n",
+      "221\n",
+      "2\n",
+      "195\n",
+      "3\n",
+      "188\n",
+      "4\n",
+      "178\n",
+      "5\n",
+      "185\n",
+      "6\n",
+      "188\n",
+      "7\n",
+      "213\n",
+      "8\n",
+      "181\n",
+      "9\n",
+      "211\n",
+      "10\n",
+      "190\n",
+      "11\n",
+      "188\n",
+      "12\n",
+      "210\n",
+      "13\n",
+      "200\n",
+      "14\n",
+      "208\n",
+      "15\n",
+      "250\n",
+      "16\n",
+      "174\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = [208, 221, 195, 188, 178, 185, 188, 213, 181 ,211 ,190, 188, 210 , 200 , 208, 250, 174]\n",
+    "\n",
+    "for index,weight in enumerate(weights):\n",
+    "    print(index)\n",
+    "    print(weight)    \n",
+    "    weight_01 = weight[index]\n",
+    "    weight_02 = weight[index+1]\n",
+    "print(weight_01)\n",
+    "print(weight_02)"
    ]
   }
  ],
