--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -232,11 +232,26 @@
     "\n",
     "for index,weight in enumerate(weights):\n",
     "    print(index)\n",
-    "    print(weight)    \n",
-    "    weight_01 = weight[index]\n",
-    "    weight_02 = weight[index+1]\n",
-    "print(weight_01)\n",
-    "print(weight_02)"
+    "    print(weight)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### While loop to print numbers less than 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1 "
    ]
   }
  ],
