--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -244,14 +244,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 10:\n",
     "    print(i)\n",
     "    i += 1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Make a game which will stop when game_over is true, use break statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "Game is still on!\n",
+      "10\n",
+      "Game is still on!\n",
+      "17\n",
+      "Game is still on!\n",
+      "26\n",
+      "Game is still on!\n",
+      "31\n",
+      "Game is still on!\n",
+      "35\n",
+      "Game is still on!\n",
+      "42\n",
+      "Game is still on!\n",
+      "45\n",
+      "Game is still on!\n",
+      "51\n",
+      "Game is still on!\n",
+      "58\n",
+      "Game is still on!\n",
+      "61\n",
+      "Game is still on!\n",
+      "70\n",
+      "Game is still on!\n",
+      "74\n",
+      "Game is still on!\n",
+      "81\n",
+      "Game is still on!\n",
+      "88\n",
+      "Game is still on!\n",
+      "98\n",
+      "Game is still on!\n",
+      "101\n",
+      "You win!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "game_over = False\n",
+    "score = 0\n",
+    "\n",
+    "while not game_over:\n",
+    "    score += random.randint(1,10)\n",
+    "    print(score)\n",
+    "\n",
+    "    if score > 100:\n",
+    "        game_over = True\n",
+    "        break ## exits out of a while/for loop quickly\n",
+    "\n",
+    "    print('Game is still on!')\n",
+    "\n",
+    "print('You win!')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Make a game which will stop when game_over is true, use continue statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "12\n",
+      "19\n",
+      "26\n",
+      "27\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "42\n",
+      "52\n",
+      "You are close to winning...\n",
+      "61\n",
+      "You are close to winning...\n",
+      "63\n",
+      "You are close to winning...\n",
+      "66\n",
+      "You are close to winning...\n",
+      "68\n",
+      "You are close to winning...\n",
+      "69\n",
+      "You are close to winning...\n",
+      "71\n",
+      "You are close to winning...\n",
+      "72\n",
+      "You are close to winning...\n",
+      "74\n",
+      "You are close to winning...\n",
+      "78\n",
+      "You are close to winning...\n",
+      "88\n",
+      "You are close to winning...\n",
+      "91\n",
+      "You are close to winning...\n",
+      "96\n",
+      "You are close to winning...\n",
+      "106\n",
+      "You win!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "game_over = False\n",
+    "score = 0\n",
+    "\n",
+    "while not game_over:\n",
+    "    score += random.randint(1,10)\n",
+    "    print(score)\n",
+    "\n",
+    "    if score < 50:\n",
+    "        continue ## starts the loop again until the condition fullfills\n",
+    "                 ## when the condition fullfills it skips over the next if condition\n",
+    "    if score > 100:\n",
+    "        game_over = True\n",
+    "        break\n",
+    "\n",
+    "    print('You are close to winning...')\n",
+    "\n",
+    "print('You win!')"
    ]
   }
  ],
