--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -421,6 +421,40 @@
     "\n",
     "print('You win!')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Warmup-2 > string_times exercise from CodingBat (https://codingbat.com/prob/p193507)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HiHiHi\n"
+     ]
+    }
+   ],
+   "source": [
+    "def string_times(str,n):\n",
+    "\n",
+    "    result = \"\"\n",
+    "    for i in range(n):\n",
+    "        \n",
+    "        result += str # concatinate strings with + operator\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "final_result = string_times('Hi', 3)\n",
+    "print(final_result)"
+   ]
   }
  ],
  "metadata": {
