--- a/loops_essentials/loops.ipynb
+++ b/loops_essentials/loops.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -454,6 +454,46 @@
     "\n",
     "final_result = string_times('Hi', 3)\n",
     "print(final_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Warmup-2 > array123 exercise from CodingBat (https://codingbat.com/prob/p193604)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [1, 1, 2, 1, 2, 3]\n",
+    "\n",
+    "def array123(nums):\n",
+    "  \n",
+    "  for i in range(len(nums)-2):\n",
+    "    \n",
+    "          firstnums = nums[i]\n",
+    "          secondnums = nums[i+1]\n",
+    "          thirdnums = nums[i+2]\n",
+    "          \n",
+    "          if firstnums == 1 and secondnums == 2 and thirdnums==3: \n",
+    "            return True   \n",
+    "\n",
+    "  return False\n",
+    "\n",
+    "result = array123(array)\n",
+    "print(result)"
    ]
   }
  ],
