--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Write a set of conditional statements to find whether or not a number is a 'special' number. Special numbers are defined ad numbers less than 100 or greter than or equal to 300. That are perfectly divisible by 3,7, or both.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
