--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Write a set of conditional statements to find whether or not a number is a 'special' number. Special numbers are defined ad numbers less than 100 or greter than or equal to 300. That are perfectly divisible by 3,7, or both.\n"
+    "###### Write a set of conditional statements to find whether or not a number is a 'special' number. Special numbers are defined as numbers less than 100 or greater than or equal to 300. That are perfectly divisible by 3,7, or both.\n"
    ]
   },
   {
