--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -9,22 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not a specil number\n"
+      "Not a special number\n"
      ]
     }
    ],
    "source": [
-    "number = 317\n",
+    "number = 123\n",
     "\n",
     "if (number < 100 or number >= 300) and (number % 3 == 0 or number % 7 == 0):\n",
-    "    print('Special Number')\n",
+    "    if (number % 3 == 0 and number % 7 ==0):\n",
+    "        print ('Divisible by both')\n",
     "else:\n",
     "    print('Not a special number')"
    ]
