--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -9,23 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not a special number\n"
+      "Divisible by both\n"
      ]
     }
    ],
    "source": [
-    "number = 123\n",
+    "number = 70\n",
     "\n",
     "if (number < 100 or number >= 300) and (number % 3 == 0 or number % 7 == 0):\n",
     "    if (number % 3 == 0 and number % 7 ==0):\n",
     "        print ('Divisible by both')\n",
+    "    elif (number % 3 == 0):\n",
+    "        print('Divisible by 3, but not 7')\n",
+    "    else:\n",
+    "        print('Divisible by 7, not 3')\n",
     "else:\n",
     "    print('Not a special number')"
    ]
