--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Divisible by both\n"
+      "Divisible by 7, not 3\n"
      ]
     }
    ],
@@ -32,6 +32,61 @@
     "        print('Divisible by 7, not 3')\n",
     "else:\n",
     "    print('Not a special number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### A function called 'spam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Follow Sabrina, she is the best!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def spam():\n",
+    "    print(\"Follow Sabrina, she is the best!\")\n",
+    "\n",
+    "spam()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### A function to return numbers being cubed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cubed(num):\n",
+    "    num = num**3\n",
+    "    return num\n",
+    "\n",
+    "print(cubed(2))"
    ]
   }
  ],
