--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### A function to return numbers being cubed!"
+    "##### A function to return numbers being cubed"
    ]
   },
   {
