--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -82,11 +82,11 @@
     }
    ],
    "source": [
-    "def cubed(num):\n",
+    "def cubeNumber(num):\n",
     "    num = num**3\n",
     "    return num\n",
     "\n",
-    "print(cubed(2))"
+    "print(cubeNumber(2))"
    ]
   }
  ],
