--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,35 @@
     "    return num\n",
     "\n",
     "print(cubeNumber(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### A function takes 3 numbers and add them all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def sumNumber(num1,num2, num3):\n",
+    "    result = num1+num2+num3\n",
+    "    return result\n",
+    "\n",
+    "print(sumNumber(1,2,3))"
    ]
   }
  ],
