--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -98,14 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "6\n",
+      "SabrinaChowdhuryOshin\n"
      ]
     }
    ],
@@ -115,7 +116,8 @@
     "    result = num1+num2+num3\n",
     "    return result\n",
     "\n",
-    "print(sumNumber(1,2,3))"
+    "print(sumNumber(1,2,3))\n",
+    "print(sum('Sabrina' + ' '+ 'Chowdhury'+ ' ' + 'Oshin'))"
    ]
   }
  ],
