--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "SabrinaChowdhuryOshin\n"
+      "Sabrina Chowdhury Oshin\n"
      ]
     }
    ],
@@ -118,6 +118,38 @@
     "\n",
     "print(sumNumber(1,2,3))\n",
     "print(sum('Sabrina' + ' '+ 'Chowdhury'+ ' ' + 'Oshin'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Warmup-1 > monkey_trouble exercise from CodingBat (https://codingbat.com/prob/p120546)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def monkey_trouble(a_smile, b_smile):\n",
+    "  if a_smile and b_smile:\n",
+    "    return True\n",
+    "  elif not a_smile and not b_smile:\n",
+    "    return True\n",
+    "  else:\n",
+    "    return False\n",
+    "\n",
+    "print(monkey_trouble(True, True))"
    ]
   }
  ],
