--- a/functions_essentials/functions_essentials.ipynb
+++ b/functions_essentials/functions_essentials.ipynb
@@ -164,7 +164,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum_double(a, b):\n",
+    "  if not a ==b:\n",
+    "    sum = a+b\n",
+    "    return sum\n",
+    "\n",
+    "  else:\n",
+    "    sum = 2*(a+b)\n",
+    "    return sum\n",
+    "\n",
+    "print(sum_double(1,2))\n",
+    "print(sum_double(2,2))"
+   ]
   }
  ],
  "metadata": {
